--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Simulation.cs" />
     <Compile Include="SimulationComponent.cs" />
     <Compile Include="SimulationState.cs" />
+    <Compile Include="StandaloneTypeContainer.cs" />
     <Compile Include="Wall.cs" />
     <Compile Include="Universe.cs" />
     <Compile Include="UpdateableEntity.cs" />
