--- a/OctoAwesome/OctoAwesome.GameServer/OctoAwesome.GameServer.csproj
+++ b/OctoAwesome/OctoAwesome.GameServer/OctoAwesome.GameServer.csproj
@@ -75,6 +75,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommandManagementSystem">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="NLog">
       <Version>4.5.11</Version>
     </PackageReference>
