--- a/OctoAwesome/OctoAwesome.GameServer/OctoAwesome.GameServer.csproj
+++ b/OctoAwesome/OctoAwesome.GameServer/OctoAwesome.GameServer.csproj
@@ -76,10 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommandManagementSystem">
-      <Version>2.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="NLog">
-      <Version>4.5.11</Version>
+      <Version>3.0.0-alpha2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
