--- a/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
+++ b/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ServerNotifications\ServerDataNotification.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SimulationManager.cs" />
+    <Compile Include="Startup.cs" />
     <Compile Include="Subscription.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -81,7 +82,7 @@
       <Version>0.2.0-alpha</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.1</Version>
+      <Version>12.0.2</Version>
     </PackageReference>
     <PackageReference Include="System.Buffers">
       <Version>4.5.0</Version>
