--- a/OctoAwesome/OctoAwesome.Database/OctoAwesome.Database.csproj
+++ b/OctoAwesome/OctoAwesome.Database/OctoAwesome.Database.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Key.cs" />
     <Compile Include="KeyStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reader.cs" />
+    <Compile Include="Value.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
