--- a/OctoAwesome/OctoAwesome.Database/OctoAwesome.Database.csproj
+++ b/OctoAwesome/OctoAwesome.Database/OctoAwesome.Database.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reader.cs" />
     <Compile Include="Value.cs" />
+    <Compile Include="ValueStore.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
