--- a/OctoAwesome/OctoAwesome.Database/OctoAwesome.Database.csproj
+++ b/OctoAwesome/OctoAwesome.Database/OctoAwesome.Database.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database.cs" />
+    <Compile Include="DatabaseContext.cs" />
+    <Compile Include="IdTag.cs" />
     <Compile Include="ITagable.cs" />
     <Compile Include="Key.cs" />
     <Compile Include="KeyStore.cs" />
