--- a/OctoAwesome/OctoAwesome.Runtime/OctoAwesome.Runtime.csproj
+++ b/OctoAwesome/OctoAwesome.Runtime/OctoAwesome.Runtime.csproj
@@ -44,7 +44,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\engenious.0.1.16\lib\net40\System.Numerics.Vectors.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -65,7 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OctoAwesome.Database\OctoAwesome.Database.csproj">
-      <Project>{D5CFB68F-B6DE-4D74-A4D6-E07B969D0624}</Project>
+      <Project>{62D15DAB-1934-43CD-BB04-4E7D28B7F02E}</Project>
       <Name>OctoAwesome.Database</Name>
     </ProjectReference>
     <ProjectReference Include="..\OctoAwesome\OctoAwesome.csproj">
@@ -75,8 +74,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="engenious">
-      <Version>0.2.0-alpha</Version>
+    <PackageReference Include="System.IO.Compression">
+      <Version>4.3.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
