Worked on EntityDefiniton
* Outsourced some Code -> New Namespace Entities

--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -124,7 +124,8 @@
     <Compile Include="SemaphoreExtended.cs" />
     <Compile Include="Serialization\ChunkDiffDatabaseContext.cs" />
     <Compile Include="Serialization\ChunkDiffTag.cs" />
-    <Compile Include="Serialization\EntityDatabaseContext.cs" />
+    <Compile Include="Serialization\Entities\EntityDatabaseContext.cs" />
+    <Compile Include="Serialization\Entities\EntityDefinition.cs" />
     <Compile Include="Serialization\IIdentification.cs" />
     <Compile Include="Serialization\ChunkColumnDatabaseContext.cs" />
     <Compile Include="Serialization\Index2Tag.cs" />
