--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -124,8 +124,10 @@
     <Compile Include="SemaphoreExtended.cs" />
     <Compile Include="Serialization\ChunkDiffDatabaseContext.cs" />
     <Compile Include="Serialization\ChunkDiffTag.cs" />
+    <Compile Include="Serialization\Entities\ComponentsDatabaseContext.cs" />
     <Compile Include="Serialization\Entities\EntityDatabaseContext.cs" />
     <Compile Include="Serialization\Entities\EntityDefinition.cs" />
+    <Compile Include="Serialization\IDatabaseProvider.cs" />
     <Compile Include="Serialization\IIdentification.cs" />
     <Compile Include="Serialization\ChunkColumnDatabaseContext.cs" />
     <Compile Include="Serialization\Index2Tag.cs" />
