Updated NuGet References

--- a/OctoAwesome/OctoAwesome.Runtime/OctoAwesome.Runtime.csproj
+++ b/OctoAwesome/OctoAwesome.Runtime/OctoAwesome.Runtime.csproj
@@ -75,6 +75,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="engenious">
+      <Version>0.3.0.32-alpha</Version>
+    </PackageReference>
     <PackageReference Include="System.IO.Compression">
       <Version>4.3.0</Version>
     </PackageReference>
