--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -169,10 +169,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="engenious">
-      <Version>0.2.0-alpha</Version>
+      <Version>0.3.0.32-alpha</Version>
     </PackageReference>
     <PackageReference Include="NLog">
-      <Version>4.6.6</Version>
+      <Version>4.7.5</Version>
+    </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter">
+      <Version>3.17.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Buffers">
+      <Version>4.5.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
