--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -131,7 +131,7 @@
     <Compile Include="Serialization\IIdentification.cs" />
     <Compile Include="Serialization\ChunkColumnDatabaseContext.cs" />
     <Compile Include="Serialization\Index2Tag.cs" />
-    <Compile Include="Serialization\ISerializableEnumerator.cs" />
+    <Compile Include="Serialization\ISerializableEnumerable.cs" />
     <Compile Include="Serialization\SerializableDatabaseContext.cs" />
     <Compile Include="Serialization\IdDatabaseContext.cs" />
     <Compile Include="Startup.cs" />
@@ -172,13 +172,7 @@
       <Version>0.3.0.32-alpha</Version>
     </PackageReference>
     <PackageReference Include="NLog">
-      <Version>4.7.5</Version>
-    </PackageReference>
-    <PackageReference Include="NUnit3TestAdapter">
-      <Version>3.17.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Buffers">
-      <Version>4.5.1</Version>
+      <Version>4.6.8</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
