--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -122,10 +122,10 @@
     <Compile Include="Pooling\IPoolElement.cs" />
     <Compile Include="Pooling\Pool.cs" />
     <Compile Include="SemaphoreExtended.cs" />
-    <Compile Include="Serialization\ChunkDiffDbContext.cs" />
+    <Compile Include="Serialization\ChunkDiffDatabaseContext.cs" />
     <Compile Include="Serialization\ChunkDiffTag.cs" />
-    <Compile Include="Serialization\Entities\EntityComponentsDbContext.cs" />
-    <Compile Include="Serialization\Entities\EntityDbContext.cs" />
+    <Compile Include="Serialization\Entities\EntityComponentsDatabaseContext.cs" />
+    <Compile Include="Serialization\Entities\EntityDatabaseContext.cs" />
     <Compile Include="Serialization\Entities\EntityDefinition.cs" />
     <Compile Include="Serialization\IDatabaseProvider.cs" />
     <Compile Include="Serialization\IIdentification.cs" />
