--- a/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
+++ b/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
@@ -200,13 +200,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="engenious">
-      <Version>0.3.0.33-alpha</Version>
+      <Version>0.3.0.36-alpha</Version>
     </PackageReference>
     <PackageReference Include="engenious.ContentTool">
-      <Version>0.3.0.28-alpha</Version>
+      <Version>0.3.0.30-alpha</Version>
     </PackageReference>
     <PackageReference Include="engenious.UI">
-      <Version>0.3.1.18-alpha</Version>
+      <Version>0.3.1.19-alpha</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
