--- a/OctoAwesome/OctoAwesome.Network.Tests/OctoAwesome.Network.Tests.csproj
+++ b/OctoAwesome/OctoAwesome.Network.Tests/OctoAwesome.Network.Tests.csproj
@@ -66,11 +66,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="engenious">
+      <Version>0.3.0.36-alpha</Version>
+    </PackageReference>
     <PackageReference Include="MSTest.TestAdapter">
-      <Version>2.1.0</Version>
+      <Version>2.1.1</Version>
     </PackageReference>
     <PackageReference Include="MSTest.TestFramework">
-      <Version>2.1.0</Version>
+      <Version>2.1.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
