--- a/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
+++ b/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Screens\LoadingScreen.cs" />
     <Compile Include="Screens\LoadScreen.cs" />
     <Compile Include="Screens\MainScreen.cs" />
+    <Compile Include="Screens\QuoteProvider.cs" />
     <Compile Include="Screens\TargetScreen.cs" />
     <Compile Include="Screens\MessageScreen.cs" />
     <Compile Include="Screens\OptionsScreen.cs" />
@@ -143,6 +144,9 @@
     <EmbeddedResource Include="Assets\Crew\base.png" />
     <EmbeddedResource Include="Assets\Crew\bobstriker.png" />
     <Content Include="Copyright.txt" />
+    <None Include="de\LoadingScreenQuotes.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="FEEDBACK.txt" />
     <Content Include="octoawesome.ico" />
     <Content Include="TODO.txt" />
