--- a/OctoAwesome/OctoAwesome.Runtime/OctoAwesome.Runtime.csproj
+++ b/OctoAwesome/OctoAwesome.Runtime/OctoAwesome.Runtime.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\engenious.0.1.16\lib\net40\System.Numerics.Vectors.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
