--- a/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
+++ b/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <ApplicationIcon>octoawesome.ico</ApplicationIcon>
     <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
@@ -61,10 +61,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="engenious" Version="0.4.0.14-alpha" />
-    <PackageReference Include="engenious.ContentTool" Version="0.4.0.3-alpha" />
-    <PackageReference Include="engenious.UI" Version="0.4.0.10-alpha" />
+    <PackageReference Include="engenious" Version="0.5.0.10-alpha" />
+    <PackageReference Include="engenious.ContentTool" Version="0.5.0.9-alpha" />
+    <PackageReference Include="engenious.UI" Version="0.5.0.4-alpha" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="System.IO" Version="4.3.0" />
     <PackageReference Include="System.IO.Compression" Version="4.3.0" />
     <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
