Migrate to .NET 5
* Added Nullable to csproj to get informed for potencial NullRefs before Runtime
* Changed Threads to Tasks and added CancellationTokens (Abort is no longer supported)
* Fixed NullRefs

--- a/OctoAwesome/OctoAwesome.Basics/OctoAwesome.Basics.csproj
+++ b/OctoAwesome/OctoAwesome.Basics/OctoAwesome.Basics.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     
     <DocumentationFile>..\bin\Debug\OctoAwesome.Basics.XML</DocumentationFile>
+
+    <Nullable>warnings</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
