--- a/OctoAwesome/OctoAwesome.Database/OctoAwesome.Database.csproj
+++ b/OctoAwesome/OctoAwesome.Database/OctoAwesome.Database.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+
+    <Nullable>warnings</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
