--- a/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
+++ b/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
 
+    <Nullable>warnings</Nullable>
+
   </PropertyGroup>
 
   <ItemGroup>
