--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -17,9 +17,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="dotVariant" Version="0.3.1" />
 		<PackageReference Include="engenious" Version="0.5.0.42-alpha" />
 		<PackageReference Include="NLog" Version="4.7.7" />
-		<PackageReference Include="NonSucking.Framework.Extension.Rx" Version="1.0.0-alpha.45-fa2fc8d" />
 		<PackageReference Include="System.Interactive" Version="5.0.0" />
 	</ItemGroup>
 
